--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/css/lightbox.min.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <title></title>
+  <title>Photo Gallery</title>
 </head>
 
 <body>
